# ci-cd-toolkit-for-NW

./: README.md  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: build_and_release.yml  regression.yml  run-tests.yml
ib_cicd/: certificates.py  ib_helpers.py  migration_helpers.py  promote_build_solution.py  promote_sb_solution.py  promote_solution.py  rebuild_utils.py
ib_cicd/assets/: instabase_client_cert.pem
regression/: test_regression.py
regression/configs/: build_solution_config.json  normal_flow_config.json
tests/: fixtures.py  test_ib_helpers.py  test_migration_helpers.py  test_promote_build_solution.py  test_promote_sb_solution.py  test_promote_solution.py  test_rebuild_utils.py
